--- a/app/internationalNews.html
+++ b/app/internationalNews.html
@@ -11,6 +11,10 @@
         <!-- build:css ./styles/app.css -->
         <link rel="stylesheet" href="./styles/app.css">
         <!-- endbuild -->
+
+        <!-- build:js ./scripts/inside.js -->
+        <script src="./scripts/inside.js"></script>
+        <!-- endbuild -->
     </head>
     <body>
         <div class="inside-page">
