--- a/app/index.html
+++ b/app/index.html
@@ -29,9 +29,9 @@
             <!-- PC Swiper -->
             <div class="swiper-container swiper-container-pc">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide swiper-slide-active" style="background-image: url(./images/banner/banner_pc.jpg);"></div>
-                    <div class="swiper-slide" style="background-image: url(./images/banner/banner_pc2.jpg);"></div>
-                    <div class="swiper-slide" style="background-image: url(./images/banner/banner_pc3.jpg);"></div>
+                    <div class="swiper-slide swiper-slide-active" style="background-image: url(./images/banner/banner_pc.jpg);"><a class="swiper-link" href="javascript:;"></a></div>
+                    <div class="swiper-slide" style="background-image: url(./images/banner/banner_pc2.jpg);"><a class="swiper-link" href="javascript:;"></a></div>
+                    <div class="swiper-slide" style="background-image: url(./images/banner/banner_pc3.jpg);"><a class="swiper-link" href="javascript:;"></a></div>
                 </div>
                 <div class="swiper-bundle-container">
                     <div class="swiper-button-prev"></div>
@@ -44,9 +44,9 @@
             <!-- Mobile Swiper -->
             <div class="swiper-container swiper-container-mobile">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide swiper-slide-active" style="background-image: url(./images/banner/banner_m.jpg);"></div>
-                    <div class="swiper-slide" style="background-image: url(./images/banner/banner_m2.jpg);"></div>
-                    <div class="swiper-slide" style="background-image: url(./images/banner/banner_m3.jpg);"></div>
+                    <div class="swiper-slide swiper-slide-active" style="background-image: url(./images/banner/banner_m.jpg);"><a class="swiper-link" href="javascript:;"></a></div>
+                    <div class="swiper-slide" style="background-image: url(./images/banner/banner_m2.jpg);"><a class="swiper-link" href="javascript:;"></a></div>
+                    <div class="swiper-slide" style="background-image: url(./images/banner/banner_m3.jpg);"><a class="swiper-link" href="javascript:;"></a></div>
                 </div>
                 <div class="swiper-bundle-container">
                     <div class="swiper-pagination"></div>
