--- a/app/investmentBoard.html
+++ b/app/investmentBoard.html
@@ -32,7 +32,8 @@
                     <!-- 麵包屑 -->
                     <nav aria-label="breadcrumb">
                         <ul class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="/"><i class="common-icon home icon-sm"></i></a></li>
+                            <li class="breadcrumb-item"><a href="./index.html"><i class="common-icon home icon-sm"></i></a></li>
+                            <li class="breadcrumb-item"><a href="javascript:;">投資產品公告</a></li>
                             <li class="breadcrumb-item active" aria-current="page">投資產品公告</li>
                         </ul>
                     </nav>
