--- a/app/internationalEconomic.html
+++ b/app/internationalEconomic.html
@@ -32,7 +32,7 @@
                     <!-- 麵包屑 -->
                     <nav aria-label="breadcrumb">
                         <ul class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="/"><i class="common-icon home icon-sm"></i></a></li>
+                            <li class="breadcrumb-item"><a href="./index.html"><i class="common-icon home icon-sm"></i></a></li>
                             <li class="breadcrumb-item"><a href="javascript:;">樂富財經訊息</a></li>
                             <li class="breadcrumb-item"><a href="javascript:;">國際金融資訊</a></li>
                             <li class="breadcrumb-item active" aria-current="page">各國經濟情勢</li>
@@ -44,7 +44,7 @@
 
                     
                     <nav class="link-list">
-                        <a class="link-item" href="/internationalNews.html">國際財經新聞</a>
+                        <a class="link-item" href="./internationalNews.html">國際財經新聞</a>
                         <a class="link-item active" href="javascript:;">各國經濟情勢</a>
                     </nav>
 
