--- a/app/internationalNews.html
+++ b/app/internationalNews.html
@@ -32,7 +32,7 @@
                     <!-- 麵包屑 -->
                     <nav aria-label="breadcrumb">
                         <ul class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="/"><i class="common-icon home icon-sm"></i></a></li>
+                            <li class="breadcrumb-item"><a href="./index.html"><i class="common-icon home icon-sm"></i></a></li>
                             <li class="breadcrumb-item"><a href="javascript:;">樂富財經訊息</a></li>
                             <li class="breadcrumb-item"><a href="javascript:;">國際金融資訊</a></li>
                             <li class="breadcrumb-item active" aria-current="page">國際財經新聞</li>
@@ -45,7 +45,7 @@
                     
                     <nav class="link-list">
                         <a class="link-item active" href="javascript:;">國際財經新聞</a>
-                        <a class="link-item" href="/internationalEconomic.html">各國經濟情勢</a>
+                        <a class="link-item" href="./internationalEconomic.html">各國經濟情勢</a>
                     </nav>
 
                     <div class="inside-content">
