--- a/app/index.html
+++ b/app/index.html
@@ -1549,7 +1549,10 @@
                                                     <div class="date">2021/03/04</div>
                                                     <div class="tag">國外基金</div>
                                                 </div>
-                                                <div class="content">陸加快功率半導體自製，兩大IGBT廠商推進A股上市<i class="common-icon pdf mgl-2"></i></div>
+                                                <div class="content">
+                                                    <div>陸加快功率半導體自製，兩大IGBT廠商推進A股上市</div>
+                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon pdf mgl-2"></i>
+                                                </div>
                                             </a>
                                         </li>
                                         <li class="board-item">
@@ -1583,7 +1586,10 @@
                                                     <div class="date">2021/03/04</div>
                                                     <div class="tag">基金</div>
                                                 </div>
-                                                <div class="content">陸加快功率半導體自製，兩大IGBT廠商推進A股上市<i class="common-icon pdf mgl-2"></i></div>
+                                                <div class="content">
+                                                    <div>陸加快功率半導體自製，兩大IGBT廠商推進A股上市</div>
+                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon pdf mgl-2"></i>
+                                                </div>
                                             </a>
                                         </li>
                                         <li class="board-item">
@@ -1617,7 +1623,10 @@
                                                     <div class="date">2021/03/04</div>
                                                     <div class="tag">ETF</div>
                                                 </div>
-                                                <div class="content">陸加快功率半導體自製，兩大IGBT廠商推進A股上市<i class="common-icon pdf mgl-2"></i></div>
+                                                <div class="content">
+                                                    <div>陸加快功率半導體自製，兩大IGBT廠商推進A股上市</div>
+                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon pdf mgl-2"></i>
+                                                </div>
                                             </a>
                                         </li>
                                         <li class="board-item">
@@ -1651,7 +1660,10 @@
                                                     <div class="date">2021/03/04</div>
                                                     <div class="tag">國外股票</div>
                                                 </div>
-                                                <div class="content">陸加快功率半導體自製，兩大IGBT廠商推進A股上市<i class="common-icon pdf mgl-2"></i></div>
+                                                <div class="content">
+                                                    <div>陸加快功率半導體自製，兩大IGBT廠商推進A股上市</div>
+                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon pdf mgl-2"></i>
+                                                </div>
                                             </a>
                                         </li>
                                         <li class="board-item">
@@ -1685,7 +1697,10 @@
                                                     <div class="date">2021/03/04</div>
                                                     <div class="tag">國外債券</div>
                                                 </div>
-                                                <div class="content">陸加快功率半導體自製，兩大IGBT廠商推進A股上市<i class="common-icon pdf mgl-2"></i></div>
+                                                <div class="content">
+                                                    <div>陸加快功率半導體自製，兩大IGBT廠商推進A股上市</div>
+                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon pdf mgl-2"></i>
+                                                </div>
                                             </a>
                                         </li>
                                         <li class="board-item">
@@ -1719,7 +1734,10 @@
                                                     <div class="date">2021/03/04</div>
                                                     <div class="tag">存款</div>
                                                 </div>
-                                                <div class="content">陸加快功率半導體自製，兩大IGBT廠商推進A股上市<i class="common-icon pdf mgl-2"></i></div>
+                                                <div class="content">
+                                                    <div>陸加快功率半導體自製，兩大IGBT廠商推進A股上市</div>
+                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon pdf mgl-2"></i>
+                                                </div>
                                             </a>
                                         </li>
                                         <li class="board-item">
@@ -1753,7 +1771,10 @@
                                                     <div class="date">2021/03/04</div>
                                                     <div class="tag">結構型商品</div>
                                                 </div>
-                                                <div class="content">陸加快功率半導體自製，兩大IGBT廠商推進A股上市<i class="common-icon pdf mgl-2"></i></div>
+                                                <div class="content">
+                                                    <div>陸加快功率半導體自製，兩大IGBT廠商推進A股上市</div>
+                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon pdf mgl-2"></i>
+                                                </div>
                                             </a>
                                         </li>
                                         <li class="board-item">
