--- a/app/index.html
+++ b/app/index.html
@@ -1550,8 +1550,8 @@
                                                     <div class="tag">國外基金</div>
                                                 </div>
                                                 <div class="content">
-                                                    <div>陸加快功率半導體自製，兩大IGBT廠商推進A股上市</div>
-                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon pdf mgl-2"></i>
+                                                    陸加快功率半導體自製，兩大IGBT廠商推進A股上市
+                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon align-middle pdf mgl-2"></i>
                                                 </div>
                                             </a>
                                         </li>
@@ -1587,8 +1587,8 @@
                                                     <div class="tag">基金</div>
                                                 </div>
                                                 <div class="content">
-                                                    <div>陸加快功率半導體自製，兩大IGBT廠商推進A股上市</div>
-                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon pdf mgl-2"></i>
+                                                    陸加快功率半導體自製，兩大IGBT廠商推進A股上市
+                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon align-middle pdf mgl-2"></i>
                                                 </div>
                                             </a>
                                         </li>
@@ -1624,8 +1624,8 @@
                                                     <div class="tag">ETF</div>
                                                 </div>
                                                 <div class="content">
-                                                    <div>陸加快功率半導體自製，兩大IGBT廠商推進A股上市</div>
-                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon pdf mgl-2"></i>
+                                                    陸加快功率半導體自製，兩大IGBT廠商推進A股上市
+                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon align-middle pdf mgl-2"></i>
                                                 </div>
                                             </a>
                                         </li>
@@ -1661,8 +1661,8 @@
                                                     <div class="tag">國外股票</div>
                                                 </div>
                                                 <div class="content">
-                                                    <div>陸加快功率半導體自製，兩大IGBT廠商推進A股上市</div>
-                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon pdf mgl-2"></i>
+                                                    陸加快功率半導體自製，兩大IGBT廠商推進A股上市
+                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon align-middle pdf mgl-2"></i>
                                                 </div>
                                             </a>
                                         </li>
@@ -1698,8 +1698,8 @@
                                                     <div class="tag">國外債券</div>
                                                 </div>
                                                 <div class="content">
-                                                    <div>陸加快功率半導體自製，兩大IGBT廠商推進A股上市</div>
-                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon pdf mgl-2"></i>
+                                                    陸加快功率半導體自製，兩大IGBT廠商推進A股上市
+                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon align-middle pdf mgl-2"></i>
                                                 </div>
                                             </a>
                                         </li>
@@ -1735,8 +1735,8 @@
                                                     <div class="tag">存款</div>
                                                 </div>
                                                 <div class="content">
-                                                    <div>陸加快功率半導體自製，兩大IGBT廠商推進A股上市</div>
-                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon pdf mgl-2"></i>
+                                                    陸加快功率半導體自製，兩大IGBT廠商推進A股上市
+                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon align-middle pdf mgl-2"></i>
                                                 </div>
                                             </a>
                                         </li>
@@ -1772,8 +1772,8 @@
                                                     <div class="tag">結構型商品</div>
                                                 </div>
                                                 <div class="content">
-                                                    <div>陸加快功率半導體自製，兩大IGBT廠商推進A股上市</div>
-                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon pdf mgl-2"></i>
+                                                    陸加快功率半導體自製，兩大IGBT廠商推進A股上市
+                                                    <i onclick="window.open('https://www.youtube.com/');" class="common-icon align-middle pdf mgl-2"></i>
                                                 </div>
                                             </a>
                                         </li>
